[workspace]
resolver = "3"
# These can depend on each other.
# We need to override `crates.io` to use local paths.
members = ["flutter_package/example/native/*", "rust_crate", "rust_crate_proc", "rust_crate_cli"]

[patch.crates-io]
rinf = { path = "rust_crate" }
rinf_proc = { path = "rust_crate_proc" }
serde-reflection = { path = "../serde-reflection/serde-reflection" }
serde-generate = { path = "../serde-reflection/serde-generate" }
